--- a/style.css
+++ b/style.css
@@ -789,13 +789,17 @@ h4 {
 
   #project h1 {
     font-size: 1.5rem;
-    margin-right: 30px;
+    margin-right: 10px;
   }
 
   .project-description,
   .project-links {
     padding: 0 50px;
     margin-top: 50px;
+  }
+
+  .project-description h4 {
+    font-size: 0.8rem;
   }
 
   #project-text {
